--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -5,5 +5,5 @@
 # Uncomment the following line to enable the Lily58 OLED Display
 CONFIG_ZMK_DISPLAY=y
 
-CONFIG_ZMK_KEYBOARD_NAME="kyuure's keyboard"
+CONFIG_ZMK_KEYBOARD_NAME="kyuure's lily58"
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
