--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -1,11 +1,14 @@
-# Uncomment to enable encoder
-# CONFIG_EC11=y
-# CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
-
-# Uncomment the following line to enable the Lily58 OLED Display
-CONFIG_ZMK_DISPLAY=y
-
 CONFIG_ZMK_KEYBOARD_NAME="kyuure's lily58"
-CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
+CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_ZMK_PM_SOFT_OFF=y
+CONFIG_ZMK_IDLE_TIMEOUT=30000
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
+CONFIG_ZMK_EXT_POWER=y
+
+CONFIG_EC11=y
+CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
